# gltf-viewer-tutorial

./: .clang-format  CMakeLists.txt
apps/gltf-viewer/: ViewerApplication.cpp  ViewerApplication.hpp
apps/gltf-viewer/include/shader/: Shader.hpp  ShadowMap.hpp
apps/gltf-viewer/include/shader/uniform/: IUniform.hpp  uniform_all.hpp
apps/gltf-viewer/include/utils/: GLFWHandle.hpp  INonCopyable.hpp  Light.hpp  QuadScreen.hpp  filesystem.hpp  gltf.hpp
apps/gltf-viewer/include/utils/camera/: Camera.hpp  FirstPersonCameraController.hpp  ICameraController.hpp  TrackballCameraController.hpp  ViewFrame.hpp
apps/gltf-viewer/include/viewer/: ViewerApplication.hpp
apps/gltf-viewer/shaders/: diffuse_directional_light.fs.glsl  directionalSM.fs.glsl  directionalSM.vs.glsl  forward.vs.glsl  magenta.fs.glsl  normals.fs.glsl  pbr_directional_light.fs.glsl  pbr_directional_light_SM.fs.glsl  pbr_directional_light_SM.vs.glsl  quadscreen.fs.glsl  quadscreen.vs.glsl
apps/gltf-viewer/src/: main.cpp
apps/gltf-viewer/src/shader/: Shader.cpp  ShadowMap.cpp
apps/gltf-viewer/src/shader/uniform/: IUniform.cpp
apps/gltf-viewer/src/utils/: FileReader.cpp  QuadScreen.cpp  gl_debug_output.cpp  gltf.cpp
apps/gltf-viewer/src/utils/camera/: Camera.cpp  FirstPersonCameraController.cpp  ICameraController.cpp  TrackballCameraController.cpp  ViewFrame.cpp
apps/gltf-viewer/src/viewer/: ViewerApplication.cpp
apps/gltf-viewer/utils/: cameras.cpp  cameras.hpp
cmake/: c2ba-assets-directory.cmake  c2ba-copy-dll-post-build.cmake  c2ba-glsl-shaders.cmake
